app/src/main/kotlin/com/example/dmitry/grades/ui/base/ui/errors/ErrorView.kt
package com.example.dmitry.grades.ui.base.ui.errors

interface ErrorView {
    fun showMessage(message: String)
}